# netbox-filter-view

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
netbox_filter_view/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_filter_view/api/: serializers.py  urls.py  views.py
netbox_filter_view/api/serializers_/: filterviews.py
netbox_filter_view/migrations/: 0001_initial.py
netbox_filter_view/static/DataTables/: datatables.css  datatables.js  datatables.min.css  datatables.min.js
netbox_filter_view/templates/netbox_filter_view/: filter_view.html  filterview.html
