[project]
name = "netbox-filter-view"
version = "0.1.4"
description = "Provides a dynamic NetBox filter view page using API data."
dependencies = []

[[project.authors]]
name = "Dylan Lucci"
email = "dylan@sol1.com.au"

[project.urls]
Homepage = "https://github.com/sol1/netbox-filter-view"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
